flux/apps/personal/freshrss/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: freshrss
    namespace: freshrss
spec:
    parentRefs:
        - name: internal-gateway
          namespace: kube-system
    hostnames:
        - "freshrss.internal.axiom.lucasfehres.nl"
    rules:
        - matches:
              - path:
                    type: PathPrefix
                    value: /
          backendRefs:
              - name: freshrss
                port: 8080
